fix missing icon and broken style on chrome browsers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,7 +525,8 @@ button:hover {
     flex-direction: column;
     gap: 10px;
     grid-area: pad-effects;
-    /* height: 100px; */
+    width: 80px;
+    margin-inline: auto;
   }
 
   /* Pads */
